--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
         <h3>LANGUAGE:</h3>
         <p>English, French</p>
     </div>
-    <div class="section" [skills]>
+    <div class="section">
         <h1>Professional Skills</h1>
         <p>HTML</p>
         <div class="scontainer">
-            <div class="skill html">90%</div>
+            <div class="skill html">95%</div>
         </div>
 
         <p>CSS</p>
@@ -64,7 +64,7 @@
 
         <p>JavaScript</p>
         <div class="scontainer">
-            <div class="skill js">60%</div>
+            <div class="skill js">70%</div>
         </div>
 
         <p>Illustrator</p>
@@ -81,6 +81,51 @@
         <div class="scontainer">
             <div class="skill wp">40%</div>
         </div>
+    </div>
+
+    <div class="section">
+        <h1>Portfolio</h1>
+        <div class="row">
+            <div class="column">
+                <a href="https://hoarder.netlify.app/pages/faq1/faq1.html" target="_blank">
+                    <img src="/assets/hoard.png" alt="hoarding webapp screenshot">
+                    <div class="overlay">Worked on FAQ page</div>
+                </a>
+
+                <a href="https://etulan-calculator.netlify.app/" target="_blank">
+                    <img src="/assets/calc.png" alt="calculator webapp screenshot">
+                    <div class="overlay">Calculator</div>
+                </a>
+            </div>
+
+            <div class="column">
+                <a href="https://affectionate-perlman-f38551.netlify.app/" target="_blank">
+                    <img src="/assets/todo.png" alt="todolist webapp screenshot">
+                    <div class="overlay">Todolist</div>
+                </a>
+
+                <a href="https://eva-mist.github.io/google_home/" target="_blank">
+                    <img src="/assets/google clone.png" alt="google clone screenshot">
+                    <div class="overlay">Google Homepage Clone</div>
+                </a>
+            </div>
+
+            <div class="column">
+                <a href="https://binancetrade-eva.netlify.app/" target="_blank">
+                    <img src="/assets/binance.jpg" alt="binance webapp screenshot">
+                    <div class="overlay">CrytoTrade Webapp(Ongoing)</div>
+                </a>
+
+                <a href="https://eva-mist.github.io/tribute/" target="_blank">
+                    <img src="/assets/tribute.png" alt="tribute page screenshot">
+                    <div class="overlay">Tribute Page</div>
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <div class="section">
+        <h1>Experience</h1>
 
     </div>
 </body>
