logos and links

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <img src="/assets/personal1.jpeg" alt="a profile picture" class="personal">
                 <h1>Opoto Etulan Eva</h1>
                 <h2>Web Developer</h2>
-                <button><a href="CV.pdf"_blank></a>Download CV</button>
+                <button><a href="/assets/CV.pdf"_blank></a>Download CV</button>
             </div>
         </div>
     </header>
@@ -139,13 +139,18 @@
             <li>Consume APIs</li>
         </ul>
 
-        <h3>Zuri Intern</h3>
+        <h3>Zuri Intern
+            <a href="https://training.zuri.team/" target="_blank"><img src="/assets/zuri.png"></a>
+            <a href="https://ingressive.org/" target="_blank"><img src="/assets/i4g.png"></a>
+        </h3>
         <p class="red">March, 2021 -July 2021</p>
         <ul>
             <li>Worked with a full team to build hoardr website</li>
         </ul>
 
-        <h3>HNG Intern</h3>
+        <h3>HNG Intern
+            <a href="https://hng.tech/" target="_blank"><img src="/assets/hng.png"></a>
+        </h3>
         <p class="red">August, 2021 - Present</p>
     </div>
 </body>
