--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <img src="/assets/personal1.jpeg" alt="a profile picture" class="personal">
                 <h1>Opoto Etulan Eva</h1>
                 <h2>Web Developer</h2>
-                <button><a href="/assets/CV.pdf"_blank></a>Download CV</button>
+                <button><a href="/assets/CV.pdf" download></a>Download CV</button>
             </div>
         </div>
     </header>
@@ -139,7 +139,7 @@
             <li>Consume APIs</li>
         </ul>
 
-        <h3>Zuri Intern
+        <h3>Zuri & I4G Intern
             <a href="https://training.zuri.team/" target="_blank"><img src="/assets/zuri.png"></a>
             <a href="https://ingressive.org/" target="_blank"><img src="/assets/i4g.png"></a>
         </h3>
