--- a/index.html
+++ b/index.html
@@ -54,8 +54,6 @@
         <p>Hello! I am Opoto Etulan Eva, a Web developer and a Student of Electrical Engineering.</p>
         <h1>Basic Information</h1>
         <hr>
-        <h3>AGE:</h3>
-        <p>22</p>
         <h3>EMAIL:</h3>
         <p>opotoeva@gmail.com</p>
         <h3>ADDRESS:</h3>
@@ -130,20 +128,22 @@
     </div>
 
     <div class="section" id="experience">
-        <h1>Experience</h1>
+        <h1>Work Experience</h1>
         <hr>
         <h3>She Code Africa Mentee (JavaScript)</h3>
         <p class="red">March, 2021 - May 2021</p>
         <ul>
             <li>Built JavaScript WebApps</li>
             <li>Consume APIs</li>
+            <li>Published technical articles</li>
+            <li>Learnt Javascript for server-side using node.js</li>
         </ul>
 
         <h3>Zuri & I4G Intern
             <a href="https://training.zuri.team/" target="_blank"><img src="/assets/zuri.png"></a>
             <a href="https://ingressive.org/" target="_blank"><img src="/assets/i4g.png"></a>
         </h3>
-        <p class="red">March, 2021 -July 2021</p>
+        <p class="red">April, 2021 -July 2021</p>
         <ul>
             <li>Worked with a full team to build hoardr website</li>
         </ul>
@@ -152,6 +152,27 @@
             <a href="https://hng.tech/" target="_blank"><img src="/assets/hng.png"></a>
         </h3>
         <p class="red">August, 2021 - Present</p>
+    </div>
+
+    <div class="section">
+        <h1>Organisations</h1>
+        <hr>
+        <h3>SCA, Portharcourt</h3>
+        <h3>360 Volunteer Network<img src="/assets/vn.jpg" class="link2"></h3><br>
+        <h1>More from me</h1>
+        <hr>
+        <h3 class="link">Personal blog and Articles<img src="/assets/devto.png">
+            <p>
+                <a href="https://dev.to/etulan" target="_blank">https://dev.to/etulan
+                    
+                </a>
+            </p>
+        </h3>
+        <h3 class="link1">Github Profile <img src="/assets/github.png">
+            <p>
+                <a href="https://github.com/eva-mist/" target="_blank" class="link">https://github.com/eva-mist/</a>
+            </p>
+        </h3>
     </div>
 </body>
 
